--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,12 @@ iframe{
 }
 
 body{
-    background-color: var(--bg-main-light);
     font-weight: 800;
     font-size: 1.5rem;
     color: var(--text-main-light);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgba(14, 3, 54, 0.849);
+    backdrop-filter: blur(15px);
 
 }
 button{
