terminacion del componente main correcciones menores al los inserts

--- a/css/common-components.css
+++ b/css/common-components.css
@@ -131,7 +131,7 @@ body{
     backdrop-filter: blur(25px);
 }
 .container{
-    background: var(--text);
+    background: url(/assets/Futaba.jpg);
 }
 /* Botones */
 .terminal-button {
