--- a/css/consulta.css
+++ b/css/consulta.css
@@ -1,52 +1,55 @@
+main{
+    border: none;
+}
 .section-1{
-    grid-column: 1/2;
-    grid-row: 1/3;
-    border-radius: 10px;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    border: none;
 }
 .section-2{
-    grid-column: 2/5;
-    grid-row: 1/3;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.section-3{
-    grid-column: 1/5;
-    grid-row: 3/4;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    border: none;
 }
 .form-item{
-    padding: .8rem;
-    padding: .4rem;
+    padding: 1rem;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.form-input{
+    width: 350px;
+    margin: .5rem;
 }
 .form-consult{
-    border-radius: 10px;
-    height: 95%;
-    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 22px;
+    height: 80vh;
+    width: 100%;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
 }
 .consult-btn{
-    margin-top: 2rem;
     background-color: rgb(37, 131, 37);
     color: var(--text-main-light);
     padding: 1rem;
-    border-radius: 10px;
-    width: 15rem;
-    height: 60px;
+    border-radius: 22px;
+    width: 8rem;
+    height: 55px;
     font-size: 1.2rem;
     font-weight: 700;
     font-family: -apple-system, sans-serif;
     cursor: pointer;
+    border: none;
 }
 .generate-consult-btn{
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 22px;
     border:none;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
     font-size: 3rem;
@@ -54,29 +57,14 @@
     font-family: Ubuntu,-apple-system, sans-serif;
     cursor: pointer;
 }
-.reset-consult-btn{
-    display:none;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    border:none;
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    font-size: 3rem;
-    font-weight: 600;
-    font-family: Ubuntu,-apple-system, sans-serif;
-    cursor: pointer;
-}
-.generate-consult-btn:hover{
-    transform: scale(1);
-    transition: ease-in .5s;
-}
+
 .info-container{
     margin: .8rem;
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    height: 95%; 
-    width: 45%;
+    height: 20vh;
+    width: 90%;
 }
 .form-btn{
     padding: 1rem;
@@ -92,6 +80,11 @@
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
     border: none;
     cursor: pointer;
+}
+.terminal-button{
+    background-color: #0d54a4;
+    border-radius: 22px;
+    border: none;
 }
 .form-text{
     font-size: 1.3rem;
@@ -126,6 +119,35 @@
     font-family: Ubuntu,-apple-system, sans-serif;
     font-weight: 700;
 }
+.datos-consulta-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: 100px 1fr 100px;
+    gap: 20px;
+    border-radius: 22px;
+}
+.empleado-text{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.ul-empleado{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    height: 100%;
+    width: 100%;
+}
+.error-panel-footer {
+    padding: 12px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+.ul-previsional{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    height: 100%;
+    width: 100%;
+}
 .ul-previsional,.ul-empleado{
     margin: 1rem;
 }
@@ -143,10 +165,26 @@
     text-align: center;
 }
 .empleado-text,.previsional-text{
+    text-align: center;
+    padding: 1rem;
+    margin: .4rem;
+    background-color: #0a0d2077;
     font-size: 2.2rem;
     font-weight: 550;
+    border-radius: 22px;
 }
 .ul-text{
     text-align: center;
     padding: .9rem;
 }
+.container-text{
+    font-size: 1.4rem;
+    padding: .4rem;
+    margin: .2rem;
+}
+.hidden{
+    display: none;
+    transition: .5s;
+}
+
+
