--- a/css/generar.css
+++ b/css/generar.css
@@ -1,151 +1,48 @@
-.form-item{
-    padding: 1rem;
-    padding: .5rem;
+.section-1{
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-.form{
-    border-radius: 10px;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.btn-container{
-    display: flex;
-    width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: .5rem;
-    padding: 1rem;
-}
-.submit-btn{
-    padding: 1rem;
-    margin: .5rem;
-    border-radius: 10px;
-    width: 15rem;
-    height: 60px;
-    font-size: 1.2rem;
-    font-weight: 700;
-    font-family: -apple-system, sans-serif;
-}
-.section-1{
-    grid-column: 1/2;
-    grid-row: 1/3;
-    border-radius: 10px;
-}
-.section-2{
-    grid-column: 2/5;
-    grid-row: 1/3;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.section-3{
-    grid-column: 1/5;
-    grid-row: 3/4;
-}
-.archive-container{
-    padding: 2rem;
-    width: 65%;
-    height: 90%;
-    text-align: center;
-    border-radius: 10px;
+    border: none;
 }
 .generate-btn{
-    color: var(--text-main-light);
-    padding: 1rem;
-    margin: .5rem;
-    border-radius: 10px;
-    width: 15rem;
     height: 60px;
-    font-size: 1.2rem;
-    font-weight: 700;
-    font-family: -apple-system, sans-serif;
-    cursor: pointer;
-}
-.form-btn{
-    padding: 1rem;
-    margin: .3rem;
-    color: var(--text-main-light);
-    height: 60px;
-    border-radius: 10px;
-    text-decoration: none;
+    width: 300px;
+    border: none;
+    border-radius: 22px;
     font-size: 1.5rem;
     font-weight: 700;
-    font-family: -apple-system, sans-serif;
-    text-align: center;
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    border: none;
-    cursor: pointer;
-}
-.form-text{
-    font-size: 2rem;
-    font-weight: 400;
-    font-family: -apple-system, sans-serif;
-    text-align: start;
-}
-.info-container{
-    margin: .8rem;
-    padding: 1rem;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    height: 95%; 
-    width: 45%;
-}
-.year-container{
-    cursor: pointer;
-    margin: .4rem;
     padding: .5rem;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    height: 50px;
-    width: 180px;
-    font-size: 1.4rem;
-    font-family: Ubuntu,-apple-system, sans-serif;
+    cursor: pointer;
+    display: none;
+}
+.contenedor-years{
+    padding: 1.4rem;   
+    height: 80%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius:22px;
+    background-color: #20202056;
+}
+.years-text{
+    width: 80%;
+    padding: 1rem;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+    font-size: 1.8rem;
     font-weight: 700;
+    background-color: #fff;
+    color: #202020;
+    text-align: center;
 }
-.mes-container{
-    cursor: pointer;
-    margin: .4rem;
-    padding: 3px;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    height: 50px;
-    width: 190px;
-    font-size: 1.4rem;
-    font-family: Ubuntu,-apple-system, sans-serif;
-    font-weight: 700;
+.contenedor-mes{
+    display: none;
 }
-.generate-consult-btn{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    border:none;
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    font-size: 3rem;
-    font-weight: 600;
-    font-family: Ubuntu,-apple-system, sans-serif;
-    cursor: pointer;
-}
-.reset-consult-btn{
-    display:none;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    border:none;
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    font-size: 3rem;
-    font-weight: 600;
-    font-family: Ubuntu,-apple-system, sans-serif;
-    cursor: pointer;
+.error-panel-footer{
+    display: none;
 }
