--- a/css/generar.css
+++ b/css/generar.css
@@ -16,33 +16,98 @@
     font-weight: 700;
     padding: .5rem;
     cursor: pointer;
-    display: none;
 }
-.contenedor-years{
-    padding: 1.4rem;   
-    height: 80%;
+.contenedor-fichero{
+    height: 90%;
     width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    border-radius:22px;
-    background-color: #20202056;
 }
+.contenedor-fichero-mes,.contenedor-fichero-year{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 55px 1fr;
+    height: 100%;
+    width: 100%;
+    padding: 1.4rem;
+    border-radius:22px;
+    border-top-left-radius: 0px;
+    background-color: #20202056;
+    margin-bottom: 2.6rem;
+    transition: .5s;
+    justify-items: start;
+}
+
 .years-text{
-    width: 80%;
-    padding: 1rem;
+    display: flex;
+    align-self: flex-start;
+    padding: .3rem;
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
     font-size: 1.8rem;
-    font-weight: 700;
+    font-weight: 800;
     background-color: #fff;
     color: #202020;
     text-align: center;
 }
-.contenedor-mes{
-    display: none;
+.mes-text{
+    padding: .3rem;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+    font-size: 1.8rem;
+    font-weight: 800;
+    background-color: #fff;
+    color: #202020;
+    text-align: center;
 }
-.error-panel-footer{
+.contenido-years{
+    padding: 2rem;
+    height: 100%;
+    width: 100%;
+    background-color: #0f45a1;
+    border-radius: 11px;
+    border-top-left-radius: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-around;
+}
+.contenido-mes{    
+    padding: 2rem;
+    height: 100%;
+    width: 100%;
+    background-color: #0f45a1;
+    border-radius: 11px;
+    border-top-left-radius: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-around;
+}
+.boton-years{
+    padding: .6rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    width: 140px;
+    height: 50px;
+    border: none;
+    border-radius: 14px;
+    cursor: pointer;
+}
+.boton-mes{
+    padding: .6rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    width: 140px;
+    height: 50px;
+    border: none;
+    border-radius: 14px;
+    cursor: pointer;
+}
+.hidden{
     display: none;
+    transition: .5s;
 }
