--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body{
     font-size: 1.5rem;
     color: var(--text-main-light);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgba(14, 3, 54, 0.849);
+    background-color: rgba(86, 63, 168, 0.849);
     backdrop-filter: blur(15px);
 
 }
@@ -34,11 +34,13 @@ button{
     width: 100vw;
     border-radius: 10px;
     gap: 10px;
+    background-color: #ff8c00;
 }
 header{
     margin: .5rem;
     grid-column: 1/7;
     border-radius: 10px;
+    background-color: rgba(86, 63, 168, 0.849);
 }
 main{
     margin: .5rem;
@@ -48,17 +50,22 @@ main{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 10px;
+    background-color: rgba(86, 63, 168, 0.849);
+
 }
 .insert{
     grid-column: 1/3;
     grid-row: 1/4;
     border-radius: 10px;
+    background-color: rgba(86, 63, 168, 0.849);
+
 }
 .consult{
     grid-column: 3/6;
     grid-row: 1/4;
     border-radius: 10px;
-}
+    background-color: rgba(86, 63, 168, 0.849);
+  }
 .switch-mode{
     grid-column: 1/2;
     grid-row: 3/6;
