--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@ iframe{
 body{
     font-weight: 800;
     font-size: 1.5rem;
-    color: var(--text-main-light);
+    color: var(--text);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgba(86, 63, 168, 0.849);
+    background-color: var(--bg);
     backdrop-filter: blur(15px);
 
 }
@@ -31,16 +31,12 @@ button{
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: minmax(150px,auto) repeat(2,1fr) minmax(100px,auto);
     height: 100vh;
-    width: 100vw;
     border-radius: 10px;
-    gap: 10px;
-    background-color: #ff8c00;
 }
 header{
     margin: .5rem;
     grid-column: 1/7;
     border-radius: 10px;
-    background-color: rgba(86, 63, 168, 0.849);
 }
 main{
     margin: .5rem;
@@ -50,27 +46,18 @@ main{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 10px;
-    background-color: rgba(86, 63, 168, 0.849);
 
 }
 .insert{
     grid-column: 1/3;
     grid-row: 1/4;
     border-radius: 10px;
-    background-color: rgba(86, 63, 168, 0.849);
-
 }
 .consult{
     grid-column: 3/6;
     grid-row: 1/4;
     border-radius: 10px;
-    background-color: rgba(86, 63, 168, 0.849);
   }
-.switch-mode{
-    grid-column: 1/2;
-    grid-row: 3/6;
-    border-radius: 10px;
-}
 .generate{
     grid-column: 2/4;
     grid-row: 3/4;
@@ -125,7 +112,7 @@ footer{
   border-radius: 10px;
   transition: all .3s;
   transition: transform 400ms, box-shadow 400ms;
-  background-color: var(--cards-light); /* Fondo por defecto */
+  background-color: var(--bg); /* Fondo por defecto */
 }
 .loader{
   display:flex;
@@ -137,152 +124,14 @@ footer{
   animation:vibrate 1.5s linear both;
 }
 .card:hover{
-  background-color: var(--hover-light);
+  background-color: var(--surface);
   box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
   animation:vibrate 1.5s linear both;
 }
 .card:active{
-  background-color: var(--active-light);
+  background-color: var(--border);
   box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
 }
-
-/* Estilos de los componentes del bento */
-
-/* Toogle */
-.app {
-    --light-col: #ffd753bd;
-    --dark-col: #26242e;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 4px 35px rgba(0, 0, 0, 0.1);
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: var(--light-col);
-    border-radius: 10px;
-    overflow: hidden;
-    user-select: none;
-  }
-  
-  .dark{
-    background-color: var(--dark-col);
-}
-  
-  nav {
-    display: flex;
-    justify-content: space-around;
-    padding: 10px 0;
-    width: 100%;
-  }
-  
-  .battery {
-    display: inline-block;
-    width: 0.85rem;
-    height: 0.45rem;
-    background-color: var(--dark-col);
-  }
-  
-  .network {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 6.8px 7.2px 6.8px;
-    border-color: transparent transparent var(--dark-col) transparent;
-    transform: rotate(135deg);
-  }
-  
-  /*circle*/
-  .circle {
-    position: relative;
-    border-radius: 100%;
-    width: 10rem;
-    height: 10rem;
-    background: linear-gradient(40deg, #ff0080, #ff8c00 70%);
-    margin: auto;
-  }
-  
-  .circle::before {
-    content: "";
-    position: absolute;
-    border-radius: 50%;
-    right: 0;
-    width: 8rem;
-    height: 8rem;
-    background: var(--bg);
-    transform: scale(0);
-    transform-origin: top right;
-    transition: 450ms;
-  }
-  
-.toggle-label{
-    width: auto;
-    margin: 20px 30px;
-    padding: 15px 35px;
-    background-color: rgba(255, 255, 255, 0.24);
-    border-radius: 50px;
-    position: relative;
-    cursor: pointer;
-    font-size: 1.1rem;
-    font-weight: bolder;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .toggle-label::before {
-    content: "";
-    position: absolute;
-    width: 50%;
-    inset: 0;
-    border-radius: inherit;
-    display: block;
-    background-color: #ffffff;
-    box-shadow: 0 2px 15px rgba(228, 225, 225, 0.15);
-    -webkit-transition: -webkit-transform 0.3s
-      cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition:
-      transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94),
-      -webkit-transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  }
-  
-  [type="checkbox"] {
-    display:none;
-  }
-  
-  [type="checkbox"]:checked + .app label span.light {
-    color: var(--light-col);
-  }
-  
-  [type="checkbox"]:checked + .app label::before {
-    transform: translateX(100%);
-  }
-  
-  [type="checkbox"]:checked + .app::before {
-    box-shadow: 0px 0px 0 150px var(--dark-col);
-  }
-  /* Circle */
-  [type="checkbox"]:checked + .app .circle::before {
-    transform: scale(1);
-    background: var(--dark-col);
-  }
-  
-  [type="checkbox"]:checked + .app .circle {
-    background: linear-gradient(40deg, #8983f7, #a3dafb 70%);
-  }
-  
-  [type="checkbox"]:checked + .app .time {
-    color: var(--light-col);
-  }
-  
-  [type="checkbox"]:checked + .app .icons .network {
-    border-bottom-color: var(--light-col);
-  }
-  
-  [type="checkbox"]:checked + .app .icons .battery {
-    background-color: var(--light-col);
-  }
 
 /* Insert Consult Generate*/
 
@@ -346,10 +195,6 @@ footer{
   .consult{
       grid-column: 1/6;
       grid-row: 2/2;
-  }
-  .switch-mode{
-      grid-column: 1/2;
-      grid-row: 3/3;
   }
   .generate{
       grid-column: 2/6;
